# upgraded-octo-enigma

./: .replit  16_TEAM_CROSS_POOL_TEST_SUMMARY.md  16_TEAM_TEST_TOURNAMENT_SUMMARY.md  CROSS_POOL_TEST_TOURNAMENT_SUMMARY.md  PLAYOFF_FORMATS_SUPPORT.md  TEST_TOURNAMENT_SUMMARY.md  create-16-team-cross-pool-test.ts  create-16-team-test-tournament.ts  create-cross-pool-test-tournament.ts  create-poolplay-test-tournaments.ts  create-test-tournament.ts  cypress.config.ts  deployed_games.json  deployed_pools.json  deployed_teams.json  division_teams_page.html  final-score-fix.ts  fix-tournament-scores.ts  package-lock.json  package.json  populate_test_tournament.py  pyproject.toml  recalculate-scores.ts  replit.md  roster_cache.db  teams_page.html  teams_page_after_menu_click.html  test-bracket-generation.ts  test-email-system.ts  test-email-with-org.ts  test-gmail-connection.ts  test-playoff-slots.ts  test-refactoring.ts  test-tiebreaker.js  test_api.cjs  test_api.js  test_games.json  test_pools.json  test_teams.json  verify-tournament-standings.ts  (+2 more)
attached_assets/: Pasted--If-you-are-already-running-Passport-Local-Strategy-Sessions-then-you-are-miles-ahead-of-the-R-1763999669535_1763999669535.txt  Pasted--V2-0-Growth-Feature-Pre-Seed-ClaimGoal-Allow-a-director-to-find-and-instantly-claim-their-org-1764102296689_1764102296691.txt  Pasted-2-Step-by-Step-Implement-Game-Dragging-Step-2a-Add-State-for-Active-Game-Go-to-line-351-right-af-1762718119615_1762718119617.txt  (+100 more)
client/: index.html
migrations/: 0000_amused_metal_master.sql  0000_deep_ink.sql  0001_cultured_junta.sql  (+12 more)
(+226 files in other folders)
