[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fuzzywuzzy>=0.18.0",
    "psycopg2-binary>=2.9.10",
    "python-levenshtein>=0.27.1",
    "requests>=2.32.4",
    "thefuzz>=0.22.1",
    "playwright>=1.42.0",
    "pytest>=8.0.0",
]
